[package]
name = "clowncopterize"
authors = ["Manu Bretelle <chantr4@gmail.com>"]
repository = "https://github.com/chantra/clowncopterize"
homepage = "https://github.com/chantra/clowncopterize"
documentation = "https://docs.rs/clowncopterize/"
license = "MIT"
version = "0.0.1"
edition = "2024"
description = "A clown to rule them all!"
readme = "README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full", "extra-traits"]}

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
